--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Default ignored files
+/shelf/
+/workspace.xml
+# Rider ignored files
+/modules.xml
+/contentModel.xml
+/projectSettingsUpdater.xml
+/.idea.SigNinja.iml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+
+# manual
+
 /.idea/
 /SigNinja.Core/bin
 /SigNinja.Core/obj
