--- a/SigNinja.Platforms.AsmResolver/SigNinja.Platforms.AsmResolver.csproj
+++ b/SigNinja.Platforms.AsmResolver/SigNinja.Platforms.AsmResolver.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AsmResolver.DotNet" Version="5.5.0" />
+    </ItemGroup>
+
 </Project>
