--- a/SigNinja.Platforms.AsmResolver/SigNinja.Platforms.AsmResolver.csproj
+++ b/SigNinja.Platforms.AsmResolver/SigNinja.Platforms.AsmResolver.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="AsmResolver.DotNet" Version="5.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SigNinja.Core\SigNinja.Core.csproj" />
+    </ItemGroup>
+
 </Project>
